<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/name_text_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/sajib"
       android:textIsSelectable="true"
       android:textColorHighlight="@color/purple_200"
       android:textAlignment="center"
       android:textSize="20sp"
       android:textAllCaps="true"
       android:textColor="@color/red"
        />
   <TextView
       android:id="@+id/age_text_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/age_text"
       android:textSize="15sp"
       android:gravity="center"
       android:textAllCaps="true"
       android:textStyle="italic"

       />

  <ScrollView
      android:layout_width="match_parent"
      android:scrollbarSize="0dp"
      android:scrollbars="none"

      android:layout_height="wrap_content">
     <LinearLayout
         android:id="@+id/listTextView"
         android:layout_width="wrap_content"
         android:orientation="vertical"
         android:layout_height="wrap_content">

         <TextView
             android:id="@+id/textFirst"

             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:lineHeight="28sp"
             android:text="@string/long_text"
             android:textSize="18sp" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:lineHeight="28sp"
             android:text="@string/long_text2"
             android:textSize="25sp" />

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineHeight="28sp"
            android:text="@string/long_text3"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineHeight="28sp"
            android:text="@string/long_text4"
            android:textSize="18sp"
            />
     </LinearLayout>

  </ScrollView>

</LinearLayout>